--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-
+<!DOCTYPE html>
+<meta charset="UTF-8">
+<title>Ferris Wheel</title>
+<link rel="stylesheet" href="./styles.css">
+<html lang="en">
+  <head></head>
+  <body></body>
+  </html>
